src/test/error/func.lns
{
   fn func() {
      return 1; // error
   }  
}
{
   fn func(): int {
      return 1.0; // error
   }
}
{
   fn func(): ... {
      return 1.0;
   }  
}
{
   fn func(): int, int {
      return 1, 0;
   }  
}
{
   fn func(): int {
      return 1, 0; // error
   }  
}
{
   fn func(): stem {
      return 1;
   }  
}
{
   fn func(): stem {
      return;  // error
   }  
   fn func2(): stem, stem {
      return 1;  // error
   }  
}
{
   fn func(): stem {
      return 1;
   }
   fn func2(): stem, stem {
      return func(); // error
   }
}
{
   fn func(): stem, stem {
      return 1, 2;
   }
   fn func2(): stem, stem {
      return func();
   }
}
{
   fn func(): stem, stem, stem {
      return 1, 2, 3;
   }
   fn func2(): stem, stem {
      return func(); // error
   }
}
{
   pub fn func() { // error
   }
   global fn func2() { // error
   }
}

{
   fn func(); // error
}
